parser.automaton
State 0:
decl' -> . decl [ # ]
-- On VAL shift to state 1
-- On TYPE shift to state 120
-- On OPEN shift to state 135
-- On LET shift to state 144
-- On rawDecl shift to state 158
-- On decl shift to state 159

State 1:
rawDecl -> VAL . idstr COLON typ [ # ]
-- On STRING shift to state 2
-- On IDENT shift to state 3
-- On idstr shift to state 4

State 2:
idstr -> STRING . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF COLON BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE reduce production idstr -> STRING 
-- On VAL reduce production idstr -> STRING 
-- On UNION reduce production idstr -> STRING 
-- On TYPE reduce production idstr -> STRING 
-- On STRING reduce production idstr -> STRING 
-- On SINGLETON reduce production idstr -> STRING 
-- On RPAREN reduce production idstr -> STRING 
-- On PROJWIRE reduce production idstr -> STRING 
-- On OPEN reduce production idstr -> STRING 
-- On MKWIRE reduce production idstr -> STRING 
-- On LPAREN reduce production idstr -> STRING 
-- On LET reduce production idstr -> STRING 
-- On LBRACE reduce production idstr -> STRING 
-- On IDENT reduce production idstr -> STRING 
-- On FUN reduce production idstr -> STRING 
-- On EQ reduce production idstr -> STRING 
-- On EOL reduce production idstr -> STRING 
-- On EOF reduce production idstr -> STRING 
-- On COLON reduce production idstr -> STRING 
-- On BOB reduce production idstr -> STRING 
-- On ASSEC reduce production idstr -> STRING 
-- On ARROW reduce production idstr -> STRING 
-- On ANY reduce production idstr -> STRING 
-- On ALICE reduce production idstr -> STRING 
-- On # reduce production idstr -> STRING 

State 3:
idstr -> IDENT . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF COLON BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE reduce production idstr -> IDENT 
-- On VAL reduce production idstr -> IDENT 
-- On UNION reduce production idstr -> IDENT 
-- On TYPE reduce production idstr -> IDENT 
-- On STRING reduce production idstr -> IDENT 
-- On SINGLETON reduce production idstr -> IDENT 
-- On RPAREN reduce production idstr -> IDENT 
-- On PROJWIRE reduce production idstr -> IDENT 
-- On OPEN reduce production idstr -> IDENT 
-- On MKWIRE reduce production idstr -> IDENT 
-- On LPAREN reduce production idstr -> IDENT 
-- On LET reduce production idstr -> IDENT 
-- On LBRACE reduce production idstr -> IDENT 
-- On IDENT reduce production idstr -> IDENT 
-- On FUN reduce production idstr -> IDENT 
-- On EQ reduce production idstr -> IDENT 
-- On EOL reduce production idstr -> IDENT 
-- On EOF reduce production idstr -> IDENT 
-- On COLON reduce production idstr -> IDENT 
-- On BOB reduce production idstr -> IDENT 
-- On ASSEC reduce production idstr -> IDENT 
-- On ARROW reduce production idstr -> IDENT 
-- On ANY reduce production idstr -> IDENT 
-- On ALICE reduce production idstr -> IDENT 
-- On # reduce production idstr -> IDENT 

State 4:
rawDecl -> VAL idstr . COLON typ [ # ]
-- On COLON shift to state 5

State 5:
rawDecl -> VAL idstr COLON . typ [ # ]
-- On WIRE shift to state 6
-- On STRING shift to state 7
-- On PROJWIRE shift to state 9
-- On MKWIRE shift to state 10
-- On IDENT shift to state 11
-- On FUN shift to state 12
-- On ASSEC shift to state 16
-- On typNormal shift to state 22
-- On typFun shift to state 23
-- On typ shift to state 119
-- On nonempty_list(idstr) shift to state 19
-- On idstr shift to state 20
-- On appName shift to state 90

State 6:
appName -> WIRE . [ WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE ]
-- On WIRE reduce production appName -> WIRE 
-- On UNION reduce production appName -> WIRE 
-- On STRING reduce production appName -> WIRE 
-- On SINGLETON reduce production appName -> WIRE 
-- On PROJWIRE reduce production appName -> WIRE 
-- On MKWIRE reduce production appName -> WIRE 
-- On LPAREN reduce production appName -> WIRE 
-- On LET reduce production appName -> WIRE 
-- On IDENT reduce production appName -> WIRE 
-- On FUN reduce production appName -> WIRE 
-- On BOB reduce production appName -> WIRE 
-- On ASSEC reduce production appName -> WIRE 
-- On ALICE reduce production appName -> WIRE 

State 7:
idstr -> STRING . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF COLON BOB ASSEC ARROW ANY ALICE # ]
typNormal -> STRING . LPAREN typ RPAREN pre_postcond pre_postcond [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On LPAREN shift to state 8
-- On WIRE reduce production idstr -> STRING 
-- On VAL reduce production idstr -> STRING 
-- On UNION reduce production idstr -> STRING 
-- On TYPE reduce production idstr -> STRING 
-- On STRING reduce production idstr -> STRING 
-- On SINGLETON reduce production idstr -> STRING 
-- On RPAREN reduce production idstr -> STRING 
-- On PROJWIRE reduce production idstr -> STRING 
-- On OPEN reduce production idstr -> STRING 
-- On MKWIRE reduce production idstr -> STRING 
-- On LPAREN reduce production idstr -> STRING 
-- On LET reduce production idstr -> STRING 
-- On LBRACE reduce production idstr -> STRING 
-- On IDENT reduce production idstr -> STRING 
-- On FUN reduce production idstr -> STRING 
-- On EQ reduce production idstr -> STRING 
-- On EOL reduce production idstr -> STRING 
-- On EOF reduce production idstr -> STRING 
-- On COLON reduce production idstr -> STRING 
-- On BOB reduce production idstr -> STRING 
-- On ASSEC reduce production idstr -> STRING 
-- On ARROW reduce production idstr -> STRING 
-- On ANY reduce production idstr -> STRING 
-- On ALICE reduce production idstr -> STRING 
-- On # reduce production idstr -> STRING 
** Conflict on LPAREN

State 8:
typNormal -> STRING LPAREN . typ RPAREN pre_postcond pre_postcond [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE shift to state 6
-- On STRING shift to state 7
-- On PROJWIRE shift to state 9
-- On MKWIRE shift to state 10
-- On IDENT shift to state 11
-- On FUN shift to state 12
-- On ASSEC shift to state 16
-- On typNormal shift to state 22
-- On typFun shift to state 23
-- On typ shift to state 110
-- On nonempty_list(idstr) shift to state 19
-- On idstr shift to state 20
-- On appName shift to state 90

State 9:
appName -> PROJWIRE . [ WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE ]
-- On WIRE reduce production appName -> PROJWIRE 
-- On UNION reduce production appName -> PROJWIRE 
-- On STRING reduce production appName -> PROJWIRE 
-- On SINGLETON reduce production appName -> PROJWIRE 
-- On PROJWIRE reduce production appName -> PROJWIRE 
-- On MKWIRE reduce production appName -> PROJWIRE 
-- On LPAREN reduce production appName -> PROJWIRE 
-- On LET reduce production appName -> PROJWIRE 
-- On IDENT reduce production appName -> PROJWIRE 
-- On FUN reduce production appName -> PROJWIRE 
-- On BOB reduce production appName -> PROJWIRE 
-- On ASSEC reduce production appName -> PROJWIRE 
-- On ALICE reduce production appName -> PROJWIRE 

State 10:
appName -> MKWIRE . [ WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE ]
-- On WIRE reduce production appName -> MKWIRE 
-- On UNION reduce production appName -> MKWIRE 
-- On STRING reduce production appName -> MKWIRE 
-- On SINGLETON reduce production appName -> MKWIRE 
-- On PROJWIRE reduce production appName -> MKWIRE 
-- On MKWIRE reduce production appName -> MKWIRE 
-- On LPAREN reduce production appName -> MKWIRE 
-- On LET reduce production appName -> MKWIRE 
-- On IDENT reduce production appName -> MKWIRE 
-- On FUN reduce production appName -> MKWIRE 
-- On BOB reduce production appName -> MKWIRE 
-- On ASSEC reduce production appName -> MKWIRE 
-- On ALICE reduce production appName -> MKWIRE 

State 11:
appName -> IDENT . [ STRING IDENT ]
idstr -> IDENT . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF COLON BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE reduce production idstr -> IDENT 
-- On VAL reduce production idstr -> IDENT 
-- On UNION reduce production idstr -> IDENT 
-- On TYPE reduce production idstr -> IDENT 
-- On STRING reduce production appName -> IDENT 
-- On STRING reduce production idstr -> IDENT 
-- On SINGLETON reduce production idstr -> IDENT 
-- On RPAREN reduce production idstr -> IDENT 
-- On PROJWIRE reduce production idstr -> IDENT 
-- On OPEN reduce production idstr -> IDENT 
-- On MKWIRE reduce production idstr -> IDENT 
-- On LPAREN reduce production idstr -> IDENT 
-- On LET reduce production idstr -> IDENT 
-- On LBRACE reduce production idstr -> IDENT 
-- On IDENT reduce production appName -> IDENT 
-- On IDENT reduce production idstr -> IDENT 
-- On FUN reduce production idstr -> IDENT 
-- On EQ reduce production idstr -> IDENT 
-- On EOL reduce production idstr -> IDENT 
-- On EOF reduce production idstr -> IDENT 
-- On COLON reduce production idstr -> IDENT 
-- On BOB reduce production idstr -> IDENT 
-- On ASSEC reduce production idstr -> IDENT 
-- On ARROW reduce production idstr -> IDENT 
-- On ANY reduce production idstr -> IDENT 
-- On ALICE reduce production idstr -> IDENT 
-- On # reduce production idstr -> IDENT 
** Conflict on STRING IDENT

State 12:
typFun -> FUN . list(binder) ARROW typNormal formula [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On STRING shift to state 2
-- On LPAREN shift to state 13
-- On IDENT shift to state 3
-- On ANY shift to state 41
-- On singleBinder shift to state 42
-- On list(binder) shift to state 104
-- On idstr shift to state 43
-- On binder shift to state 108
-- On ARROW reduce production list(binder) -> 

State 13:
singleBinder -> LPAREN . IDENT COLON typNormal RPAREN [ VAL TYPE STRING OPEN LPAREN LET IDENT EQ EOL EOF ARROW ANY # ]
-- On IDENT shift to state 14

State 14:
singleBinder -> LPAREN IDENT . COLON typNormal RPAREN [ VAL TYPE STRING OPEN LPAREN LET IDENT EQ EOL EOF ARROW ANY # ]
-- On COLON shift to state 15

State 15:
singleBinder -> LPAREN IDENT COLON . typNormal RPAREN [ VAL TYPE STRING OPEN LPAREN LET IDENT EQ EOL EOF ARROW ANY # ]
-- On WIRE shift to state 6
-- On STRING shift to state 7
-- On PROJWIRE shift to state 9
-- On MKWIRE shift to state 10
-- On IDENT shift to state 11
-- On ASSEC shift to state 16
-- On typNormal shift to state 17
-- On nonempty_list(idstr) shift to state 19
-- On idstr shift to state 20
-- On appName shift to state 90

State 16:
appName -> ASSEC . [ WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE ]
appName -> ASSEC . [ WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE ]
-- On WIRE reduce production appName -> ASSEC 
-- On WIRE reduce production appName -> ASSEC 
-- On UNION reduce production appName -> ASSEC 
-- On UNION reduce production appName -> ASSEC 
-- On STRING reduce production appName -> ASSEC 
-- On STRING reduce production appName -> ASSEC 
-- On SINGLETON reduce production appName -> ASSEC 
-- On SINGLETON reduce production appName -> ASSEC 
-- On PROJWIRE reduce production appName -> ASSEC 
-- On PROJWIRE reduce production appName -> ASSEC 
-- On MKWIRE reduce production appName -> ASSEC 
-- On MKWIRE reduce production appName -> ASSEC 
-- On LPAREN reduce production appName -> ASSEC 
-- On LPAREN reduce production appName -> ASSEC 
-- On LET reduce production appName -> ASSEC 
-- On LET reduce production appName -> ASSEC 
-- On IDENT reduce production appName -> ASSEC 
-- On IDENT reduce production appName -> ASSEC 
-- On FUN reduce production appName -> ASSEC 
-- On FUN reduce production appName -> ASSEC 
-- On BOB reduce production appName -> ASSEC 
-- On BOB reduce production appName -> ASSEC 
-- On ASSEC reduce production appName -> ASSEC 
-- On ASSEC reduce production appName -> ASSEC 
-- On ALICE reduce production appName -> ASSEC 
-- On ALICE reduce production appName -> ASSEC 
** Conflict on WIRE UNION STRING SINGLETON PROJWIRE MKWIRE LPAREN LET IDENT FUN BOB ASSEC ALICE

State 17:
singleBinder -> LPAREN IDENT COLON typNormal . RPAREN [ VAL TYPE STRING OPEN LPAREN LET IDENT EQ EOL EOF ARROW ANY # ]
-- On RPAREN shift to state 18

State 18:
singleBinder -> LPAREN IDENT COLON typNormal RPAREN . [ VAL TYPE STRING OPEN LPAREN LET IDENT EQ EOL EOF ARROW ANY # ]
-- On VAL reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On TYPE reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On STRING reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On OPEN reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On LPAREN reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On LET reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On IDENT reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On EQ reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On EOL reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On EOF reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On ARROW reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On ANY reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 
-- On # reduce production singleBinder -> LPAREN IDENT COLON typNormal RPAREN 

State 19:
typNormal -> nonempty_list(idstr) . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE reduce production typNormal -> nonempty_list(idstr) 
-- On VAL reduce production typNormal -> nonempty_list(idstr) 
-- On UNION reduce production typNormal -> nonempty_list(idstr) 
-- On TYPE reduce production typNormal -> nonempty_list(idstr) 
-- On STRING reduce production typNormal -> nonempty_list(idstr) 
-- On SINGLETON reduce production typNormal -> nonempty_list(idstr) 
-- On RPAREN reduce production typNormal -> nonempty_list(idstr) 
-- On PROJWIRE reduce production typNormal -> nonempty_list(idstr) 
-- On OPEN reduce production typNormal -> nonempty_list(idstr) 
-- On MKWIRE reduce production typNormal -> nonempty_list(idstr) 
-- On LPAREN reduce production typNormal -> nonempty_list(idstr) 
-- On LET reduce production typNormal -> nonempty_list(idstr) 
-- On LBRACE reduce production typNormal -> nonempty_list(idstr) 
-- On IDENT reduce production typNormal -> nonempty_list(idstr) 
-- On FUN reduce production typNormal -> nonempty_list(idstr) 
-- On EQ reduce production typNormal -> nonempty_list(idstr) 
-- On EOL reduce production typNormal -> nonempty_list(idstr) 
-- On EOF reduce production typNormal -> nonempty_list(idstr) 
-- On BOB reduce production typNormal -> nonempty_list(idstr) 
-- On ASSEC reduce production typNormal -> nonempty_list(idstr) 
-- On ARROW reduce production typNormal -> nonempty_list(idstr) 
-- On ANY reduce production typNormal -> nonempty_list(idstr) 
-- On ALICE reduce production typNormal -> nonempty_list(idstr) 
-- On # reduce production typNormal -> nonempty_list(idstr) 

State 20:
nonempty_list(idstr) -> idstr . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
nonempty_list(idstr) -> idstr . nonempty_list(idstr) [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
typNormal -> idstr . COLON typ LBRACE formula RBRACE [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
typNormal -> idstr . COLON typ ARROW typ [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
typNormal -> idstr . COLON typ LBRACE formula RBRACE ARROW typ [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On STRING shift to state 2
-- On IDENT shift to state 3
-- On COLON shift to state 21
-- On nonempty_list(idstr) shift to state 93
-- On idstr shift to state 92
-- On WIRE reduce production nonempty_list(idstr) -> idstr 
-- On VAL reduce production nonempty_list(idstr) -> idstr 
-- On UNION reduce production nonempty_list(idstr) -> idstr 
-- On TYPE reduce production nonempty_list(idstr) -> idstr 
-- On STRING reduce production nonempty_list(idstr) -> idstr 
-- On SINGLETON reduce production nonempty_list(idstr) -> idstr 
-- On RPAREN reduce production nonempty_list(idstr) -> idstr 
-- On PROJWIRE reduce production nonempty_list(idstr) -> idstr 
-- On OPEN reduce production nonempty_list(idstr) -> idstr 
-- On MKWIRE reduce production nonempty_list(idstr) -> idstr 
-- On LPAREN reduce production nonempty_list(idstr) -> idstr 
-- On LET reduce production nonempty_list(idstr) -> idstr 
-- On LBRACE reduce production nonempty_list(idstr) -> idstr 
-- On IDENT reduce production nonempty_list(idstr) -> idstr 
-- On FUN reduce production nonempty_list(idstr) -> idstr 
-- On EQ reduce production nonempty_list(idstr) -> idstr 
-- On EOL reduce production nonempty_list(idstr) -> idstr 
-- On EOF reduce production nonempty_list(idstr) -> idstr 
-- On BOB reduce production nonempty_list(idstr) -> idstr 
-- On ASSEC reduce production nonempty_list(idstr) -> idstr 
-- On ARROW reduce production nonempty_list(idstr) -> idstr 
-- On ANY reduce production nonempty_list(idstr) -> idstr 
-- On ALICE reduce production nonempty_list(idstr) -> idstr 
-- On # reduce production nonempty_list(idstr) -> idstr 
** Conflict on STRING IDENT

State 21:
typNormal -> idstr COLON . typ LBRACE formula RBRACE [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
typNormal -> idstr COLON . typ ARROW typ [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
typNormal -> idstr COLON . typ LBRACE formula RBRACE ARROW typ [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE shift to state 6
-- On STRING shift to state 7
-- On PROJWIRE shift to state 9
-- On MKWIRE shift to state 10
-- On IDENT shift to state 11
-- On FUN shift to state 12
-- On ASSEC shift to state 16
-- On typNormal shift to state 22
-- On typFun shift to state 23
-- On typ shift to state 24
-- On nonempty_list(idstr) shift to state 19
-- On idstr shift to state 20
-- On appName shift to state 90

State 22:
typ -> typNormal . [ WIRE VAL UNION TYPE STRING SINGLETON RPAREN PROJWIRE OPEN MKWIRE LPAREN LET LBRACE IDENT FUN EQ EOL EOF BOB ASSEC ARROW ANY ALICE # ]
-- On WIRE reduce production typ -> typNormal 
-- On VAL reduce production typ -> typNormal 
-- On UNION reduce production typ -> typNormal 
-- On TYPE reduce production typ -> typNormal 
-- On STRING reduce production typ -> typNormal 
-- On SINGLETON reduce production typ -> typNormal 
-- On RPAREN reduce production typ -> typNormal 
-- On PROJWIRE reduce production typ -> typNormal 
-- On OPEN reduce production typ -> typNormal 
-- On MKWIRE reduce production typ -> typNormal 
-- On LPAREN reduce production typ -> typNormal 
-- On LET reduce production typ -> typNormal 
-- On LBRACE reduce production typ -> typNormal 
-- On IDENT reduce production typ -> typNormal 
-- On FUN reduce production typ -> typNormal 
-- On EQ reduce production typ -> typNormal 
-- On EOL reduce production typ -> typNormal 
-- On EOF reduce production typ -> typNormal 
-- On BOB reduce production typ -> typNormal 
-- On ASSEC reduce production typ -> typNormal 
-- On ARROW reduce production typ -> typNormal 
-- On ANY reduce production typ -> typNormal 
-- On ALICE reduce production typ -> typNormal 
-- On # reduce production typ -> typNormal 
